feat: Added getPlaylist endpoint
