# internal/api/openapi/openapi_genres_types.gen.go
@@ -1,11 +1,38 @@
 // Package openapi provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
 package openapi
+
+import (
+	"time"
+)
+
+// Error defines model for Error.
+type Error struct {
+	Error     string    `json:"error"`
+	Message   string    `json:"message"`
+	Path      string    `json:"path"`
+	Status    int32     `json:"status"`
+	Timestamp time.Time `json:"timestamp"`
+}
 
 // GenreListResponse defines model for GenreListResponse.
 type GenreListResponse struct {
 	Genres *[]struct {
 		Genre string `json:"genre"`
 	} `json:"genres,omitempty"`
+}
+
+// Music defines model for Music.
+type Music struct {
+	Album  string `json:"album"`
+	Artist string `json:"artist"`
+	Genre  string `json:"genre"`
+	Name   string `json:"name"`
+}
+
+// PlaylistResponse defines model for PlaylistResponse.
+type PlaylistResponse struct {
+	Id       int     `json:"id"`
+	Playlist []Music `json:"playlist"`
 }
